@@ -1,3 +1,9 @@
+2007-05-12  Stefan Kost  <ensonic@users.sf.net>
+
+	* src/BuzzMachineLoader.dll:
+	* src/bml.c: (bml_logger), (bml_setup):
+	  Add log handler to savely redirect BuzzMachineLoader to the bml side.
+
 2007-05-02  Stefan Kost  <ensonic@users.sf.net>
 
 	* ChangeLog:
